--- a/docker-deploy/Dockerfile
+++ b/docker-deploy/Dockerfile
@@ -1,12 +1,13 @@
-FROM golang:1.20.5
+FROM golang:1.24.1
 
 WORKDIR /app
 
 COPY go.mod go.sum ./
 RUN go mod tidy
+RUN go mod download
 
 COPY . .
 
-RUN go build -o main .
+RUN go build -o main ./cmd/exchange/main.go
 
 CMD ["./main"]
